# birdrecord-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  birdrecord_client.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish-pypi.yml  release.yml
birdrecord_cli/: __init__.py  cli_main.py  client.py  constants.py  crypto.py  i18n.py
birdrecord_cli/cli/: __init__.py  core.py
birdrecord_cli/cli/adcode/: __init__.py
birdrecord_cli/cli/report/: __init__.py
birdrecord_cli/cli/search/: __init__.py  report_map.py
birdrecord_cli/cli/taxon/: __init__.py
birdrecord_cli/models/: __init__.py
birdrecord_cli/models/cli/: __init__.py  stdout.py  unified_search.py
birdrecord_cli/models/client/: __init__.py  activity_payloads.py  activity_requests.py  adcode.py  chart_payloads.py  chart_requests.py  envelopes.py  report_payloads.py  report_requests.py  taxon.py
docs/: CLI.md  CLI.zh-CN.md  birdrecord-demo.cast  project-card.html
scripts/: asciinema-demo.sh  sync_skill_uvx_pins.py
skills/birdrecord-report-detail/: SKILL.md
skills/birdrecord-search/: SKILL.md
skills/birdrecord-taxon-search/: SKILL.md
tests/: test_birdrecord_client.py
