[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "birdrecord-cli"
version = "0.1.2"
description = "CLI for China Bird Record (birdreport.cn); default API host weixin.birdrecord.cn."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "yoshino-s" }]
keywords = ["birdrecord", "birding", "cli", "weixin", "miniprogram", "requests", "click"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
# Keep in sync with birdrecord_cli (clone + uv sync + pytest).
dependencies = [
    "click>=8.1.0",
    "requests>=2.32.0",
    "pycryptodome>=3.21.0",
    "pydantic>=2.10.0",
    "pypinyin>=0.53.0",
]

[project.scripts]
birdrecord-cli = "birdrecord_cli.cli:main"

[project.urls]
Homepage = "https://github.com/yoshino-s/birdrecord-cli"
Repository = "https://github.com/yoshino-s/birdrecord-cli"
Documentation = "https://github.com/yoshino-s/birdrecord-cli#readme"
Issues = "https://github.com/yoshino-s/birdrecord-cli/issues"
Changelog = "https://github.com/yoshino-s/birdrecord-cli/releases"
PyPI = "https://pypi.org/project/birdrecord-cli/"

[dependency-groups]
dev = [
    "build>=1.2.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["birdrecord_cli*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
